--- a/css/index.css
+++ b/css/index.css
@@ -1,56 +1,40 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    text-align: center;
+}
 ul {
-	-webkit-padding-start: 0;
+    list-style-type: none;
+}
+div.column {
+    width: 30%;
+    margin: 0;
+    padding: .5em;
+    display: inline-block;
+}
+
+ul {
+    -webkit-padding-start: 0;
 }
 
 .menu {
-	display: flex;
-	list-style: none;
-	justify-content: center;
+    display: flex;
+    list-style: none;
+    justify-content: center;
 }
 
 .menu li {
-	margin: 0 10px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	padding: 5px;
-	cursor: pointer;
+    margin: 0 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
 }
 
 .menu li:hover {
-	background-color: #ccc;
-	color: #fff;
+    background-color: #ccc;
+    color: #fff;
 }
 
-#div {
-	box-sizing: border-box;
-	padding: 15px;
-	width: 500px;
-	height: 500px;
-	overflow: scroll;
-	margin: 15px auto;
-	border: 1px solid #ccc;
-}
-
-.content {
-	list-style: none;
-}
-
-.content li {
-	background-color: #ecedf7;
-	padding: 5px;
-	margin: 10px;
-	text-align: center;
-}
-
-.content li img {
-	border-radius: 50%;
-	overflow: hidden;
-	-webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-	box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-}
-
-.content h2 {
-	font-size: 16px;
-	margin: 5px;
-}
