--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ ul li:hover {
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.checked-true {
+ul li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
