--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,11 @@
 body {
     text-align: center;
 }
-ul {
+.list {
     list-style-type: none;
 }
 /* Style the list items */
-ul li {
+.list li {
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
@@ -25,24 +25,24 @@ ul li {
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
+.list li:nth-child(odd) {
     background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
-ul li:hover {
+.list li:hover {
     background: #ddd;
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.checked {
+.list li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
 }
 
 /* Add a "checked" mark when clicked on */
-ul li.checked::before {
+.list li.checked::before {
     content: '';
     position: absolute;
     border-color: #fff;
