--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,6 @@ body {
 .list {
     list-style-type: none;
 }
-/* Style the list items */
 .list li {
     cursor: pointer;
     position: relative;
@@ -16,7 +15,7 @@ body {
     background: #eaddee;
     font-size: 18px;
     transition: 1s;
-    border-redius:5%;
+    border-radius:2%;
     box-shadow: 0 0 10px;
 
     /* make the list items unselectable */
@@ -26,19 +25,18 @@ body {
     user-select: none;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
 .list li:nth-child(odd) {
     background: #f9f9f9;
 }
 
-/* Darker background-color on hover */
+
 .list li:hover {
     background: #888;
     color: #fff;
     text-decoration: line-through;
 }
 
-/* When clicked on, add a background color and strike out text */
+
 .list li.checked {
     background: #888;
     color: #fff;
@@ -64,10 +62,11 @@ body {
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
-    background: #e4eee5;
+    background: #eaddee;
     font-size: 18px;
     transition: 1s;
-    color:white;
+    border-radius:2%;
+    box-shadow: 0 0 10px;
 
     /* make the list items unselectable */
     -webkit-user-select: none;
@@ -77,40 +76,14 @@ body {
 }
 
 .done li:nth-child(odd) {
-    background: #8a8687;
+     background: #f9f9f9;
 }
 
 .done li:hover {
-    background: #f8efee;
+     background: #888;
     color: #fff;
 }
-.archive {
-    list-style-type: none;
-}
-.archive li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    background: #d8decb;
-    font-size: 18px;
-    transition: 1s;
-    color:white;
 
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.archive li:nth-child(odd) {
-    background: #5a595c;
-}
-
-.archive li:hover {
-    background: #f3e1f8;
-    color: #fff;
-}
 div.column {
     width: 30%;
     margin: 0;
@@ -166,4 +139,42 @@ ul {
 }
 input {
     width:50%;
+}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  height: 30px;
+  width: 80px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
