--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,11 @@
 
 body {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    background: -webkit-linear-gradient(to top right, #d1d2d3 10%, rgba(70,121,167,1) 100%);
+    background: -moz-linear-gradient(to top right, #d1d2d3 10%, rgba(70,121,167,1) 100%);
+    background: -o-linear-gradient(to top right, #d1d2d3 10%, rgba(70,121,167,1) 100%);
+    background: linear-gradient(to top right, #d1d2d3 10%, rgba(70,121,167,1) 100%);
 }
 .list {
     list-style-type: none;
